--- a/configs/afrispeech_dialog_only.yml
+++ b/configs/afrispeech_dialog_only.yml
@@ -1,10 +1,10 @@
 # AfriSpeech-Dialog Codec Evaluation Configuration
-# Focus on AfriSpeech-Dialog dataset with 5 neural codecs
+# Focus on AfriSpeech-Dialog dataset with 6 neural codecs
 
 # Bitrates for comprehensive evaluation (EnCodec compatible)
 bitrate_kbps: [3, 6, 12, 24]  # EnCodec supports: [1.5, 3.0, 6, 12.0, 24.0]
 
-# All 5 neural codecs for comprehensive evaluation (SoundStream removed - identical to EnCodec)
+# All 6 neural codecs for comprehensive evaluation (SoundStream removed - identical to EnCodec)
 codecs:
   - name: encodec_24khz
     runner: code.codecs.encodec_runner:EncodecRunner
@@ -24,6 +24,10 @@ codecs:
     
   - name: apcodec
     runner: code.codecs.apcodec_runner:APCodecRunner
+    args: { bitrate_kbps: "${bitrate_kbps}", sr: 24000 }
+    
+  - name: languagecodec
+    runner: code.codecs.languagecodec_runner:LanguageCodecRunner
     args: { bitrate_kbps: "${bitrate_kbps}", sr: 24000 }
 
 # AfriSpeech-Dialog dataset only
